{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 20,
  "lineage": "ec7d994a-0d1f-20f3-d54d-17eff5e24a1d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:internet-gateway/igw-0151c2e9619cc7c6b",
            "id": "igw-0151c2e9619cc7c6b",
            "owner_id": "759037523915",
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            },
            "vpc_id": "vpc-0fed238af1eb86dad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0151c2e9619cc7c6b",
            "id": "r-rtb-02bf807f7788c91fa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02bf807f7788c91fa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:route-table/rtb-0653497c88545c46b",
            "id": "rtb-0653497c88545c46b",
            "owner_id": "759037523915",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fed238af1eb86dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:route-table/rtb-0a7b90a44c78b5198",
            "id": "rtb-0a7b90a44c78b5198",
            "owner_id": "759037523915",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fed238af1eb86dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:route-table/rtb-0c06e7fb68ff9a193",
            "id": "rtb-0c06e7fb68ff9a193",
            "owner_id": "759037523915",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fed238af1eb86dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:route-table/rtb-02bf807f7788c91fa",
            "id": "rtb-02bf807f7788c91fa",
            "owner_id": "759037523915",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fed238af1eb86dad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c0074a301c5431e",
            "route_table_id": "rtb-0653497c88545c46b",
            "subnet_id": "subnet-07172ae76a6e072d5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b355eef4ed9e8eab",
            "route_table_id": "rtb-0a7b90a44c78b5198",
            "subnet_id": "subnet-02f00daa88e86f328"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026988f1edb242840",
            "route_table_id": "rtb-0c06e7fb68ff9a193",
            "subnet_id": "subnet-061f82b06e4cdf724"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfcc559621a54016",
            "route_table_id": "rtb-02bf807f7788c91fa",
            "subnet_id": "subnet-07b0c295f643f6001"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fbcedcd36ae613d",
            "route_table_id": "rtb-02bf807f7788c91fa",
            "subnet_id": "subnet-0fae8d45c298bfb2b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad6a28ada864e44b",
            "route_table_id": "rtb-02bf807f7788c91fa",
            "subnet_id": "subnet-03421cb98cd086504"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:subnet/subnet-07172ae76a6e072d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07172ae76a6e072d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "759037523915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            },
            "vpc_id": "vpc-0fed238af1eb86dad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:subnet/subnet-02f00daa88e86f328",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "30.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f00daa88e86f328",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "759037523915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            },
            "vpc_id": "vpc-0fed238af1eb86dad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:subnet/subnet-061f82b06e4cdf724",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061f82b06e4cdf724",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "759037523915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            },
            "vpc_id": "vpc-0fed238af1eb86dad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:subnet/subnet-07b0c295f643f6001",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "30.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b0c295f643f6001",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "759037523915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            },
            "vpc_id": "vpc-0fed238af1eb86dad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:subnet/subnet-0fae8d45c298bfb2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "30.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fae8d45c298bfb2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "759037523915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            },
            "vpc_id": "vpc-0fed238af1eb86dad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:subnet/subnet-03421cb98cd086504",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03421cb98cd086504",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "759037523915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            },
            "vpc_id": "vpc-0fed238af1eb86dad"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:759037523915:vpc/vpc-0fed238af1eb86dad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-07f10608e324dc668",
            "default_route_table_id": "rtb-0ec5d96973b85feff",
            "default_security_group_id": "sg-023fc767310304996",
            "dhcp_options_id": "dopt-ca7e35b0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fed238af1eb86dad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec5d96973b85feff",
            "owner_id": "759037523915",
            "tags": {
              "Name": "retool-dev-vpc"
            },
            "tags_all": {
              "Name": "retool-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}